[project]
name = "antiminer"
version = "0.1.0"
description = "AntiMiner Formal Verification Reconstruction"
authors = [{ name = "Manus" }]
dependencies = [
    "flet>=0.21.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
requires-python = ">=3.11"

[project.scripts]
antiminer = "antiminer.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
